--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="row item">
                         <div class="col-5">
-                            <img src="assets/images/roomtype2.jpg" class="img-fluid">
+                            <img src="assets/images/roomtype3.jpg" class="img-fluid">
                         </div>
                         <div class="col-7 room-description">
                             <h5>A/C Executive</h5>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="row item">
                         <div class="col-5">
-                            <img src="assets/images/roomtype3.jpg" class="img-fluid">
+                            <img src="assets/images/roomtype2.jpg" class="img-fluid">
                         </div>
                         <div class="col-7 room-description">
                             <h5>A/C Deluxe</h5>
@@ -165,8 +165,8 @@
                 </div>
             </div>
             <div class="cover-details">
-                <div class="row facilities-wrapper">
-                    <div class="col-7 facilities-desc">
+                <div class="row justify-content-between facilities-wrapper">
+                    <div class="col-6 facilities-desc">
                         <div class="row">
                             <div class="col-6 item">
                                 <img src="assets/images/car-parking.png" alt="">
@@ -200,8 +200,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-5 facilities-img">
-                        
+                    <div class="col-5 facilities-img px-0">
+                        <img src="assets/images/facilities-vertical.jpg" class="img-fluid border-curved">
                     </div>
                 </div>
             </div>
@@ -215,40 +215,141 @@
             </div>
             <div class="cover-details">
                 <div class="row explore-wrapper">
-                    <div class="col-6 item">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="assets/images/aliyardam.jpg" class="img-fluid" alt="">
-                                <div class="place-desc bg-success">
-                                    <h4>Aliyar Dam</h4>
-                                    <h5>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                    <div class="col-12">
+                        <div class="row portfolio-grid">
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in border-curved">
+                                    <img src="assets/images/aliyardam.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>ALIYAR DAM</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
                                         children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel.</h5>
-                                </div>
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in">
+                                    <img src="assets/images/arivuthirukovil.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>ARIVU THIRUKOVIL</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in">
+                                    <img src="assets/images/monkeyfalls.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>MONKEY FALSS</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in">
+                                    <img src="assets/images/valparai.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>VALPARAI</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in border-curved">
+                                    <img src="assets/images/valparai.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>ALIYAR DAM</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in">
+                                    <img src="assets/images/masaniamman.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>ARIVU THIRUKOVIL</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in">
+                                    <img src="assets/images/thirumoorthi.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>THIRUMOORTHI</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in">
+                                    <img src="assets/images/palani.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>PALANI</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in">
+                                    <img src="assets/images/kodaikanal.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>KODAIKANAL</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in">
+                                    <img src="assets/images/ooty.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>OOTY</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in">
+                                    <img src="assets/images/guruvayur.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>MUNNAR</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-3 col-sm-6 col-12">
+                                <figure class="effect-text-in">
+                                    <img src="assets/images/guruvayur.jpg" class="img-fluid" alt="image" />
+                                    <figcaption>
+                                        <h4>GURUVAYUR</h4>
+                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
+                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
+                                        the hotel</p>
+                                    </figcaption>
+                                </figure>
                             </div>
                         </div>
-                        
-                    </div>
-                    <div class="col-6 item">
-                        <img src="assets/images/arivuthirukovil.jpg" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-6 item">
-                        <img src="assets/images/monkeyfalls.jpg" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-6 item">
-                        <img src="assets/images/valparai.jpg" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-6 item">
-                        <img src="assets/images/parambikulam.jpg" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-6 item">
-                        <img src="assets/images/masaniamman.jpg" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-6 item">
-                        <img src="assets/images/thirumoorthi.jpg" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-6 item">
-                        <img src="assets/images/palani.jpg" class="img-fluid" alt="">
                     </div>
                 </div>
             </div>
