--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
                                     <span class="mdi mdi-snowflake"></span>
                                     <span class="mdi mdi-wifi ml-2"></span>
                                     <span class="mdi mdi-desktop-mac ml-2"></span>
-                                    <span class="mdi mdi-cog-outline ml-2"></span>
-                                    <span class="mdi mdi-glass-wine ml-2"></span>
-                                    <span class="mdi mdi-smoking-pipe ml-2"></span>
-                                    <span class="mdi mdi-office-building-outline ml-2"></span>
+                                    <span class="mdi mdi-lock ml-2"></span>
+                                    <span class="mdi mdi-food-fork-drink ml-2"></span>
+                                    <span class="mdi mdi-hanger ml-2"></span>
                                     <span class="mdi mdi-wardrobe ml-2"></span>
                                 </div>
                                 <button class="btn btn-book-now font-weight-medium mt-3" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
@@ -118,10 +117,9 @@
                                     <span class="mdi mdi-snowflake"></span>
                                     <span class="mdi mdi-wifi ml-2"></span>
                                     <span class="mdi mdi-desktop-mac ml-2"></span>
-                                    <span class="mdi mdi-cog-outline ml-2"></span>
-                                    <span class="mdi mdi-glass-wine ml-2"></span>
-                                    <span class="mdi mdi-smoking-pipe ml-2"></span>
-                                    <span class="mdi mdi-office-building-outline ml-2"></span>
+                                    <span class="mdi mdi-lock ml-2"></span>
+                                    <span class="mdi mdi-food-fork-drink ml-2"></span>
+                                    <span class="mdi mdi-hanger ml-2"></span>
                                     <span class="mdi mdi-wardrobe ml-2"></span>
                                 </div>
                                 <button class="btn btn-book-now font-weight-medium mt-3" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
@@ -144,10 +142,9 @@
                                     <span class="mdi mdi-snowflake"></span>
                                     <span class="mdi mdi-wifi ml-2"></span>
                                     <span class="mdi mdi-desktop-mac ml-2"></span>
-                                    <span class="mdi mdi-cog-outline ml-2"></span>
-                                    <span class="mdi mdi-glass-wine ml-2"></span>
-                                    <span class="mdi mdi-smoking-pipe ml-2"></span>
-                                    <span class="mdi mdi-office-building-outline ml-2"></span>
+                                    <span class="mdi mdi-lock ml-2"></span>
+                                    <span class="mdi mdi-food-fork-drink ml-2"></span>
+                                    <span class="mdi mdi-hanger ml-2"></span>
                                     <span class="mdi mdi-wardrobe ml-2"></span>
                                 </div>
                                 <button class="btn btn-book-now font-weight-medium mt-3" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
@@ -175,7 +172,7 @@
                             </div>
                             <div class="col-12 col-md-6 item">
                                 <img src="assets/images/water.png" alt="">
-                                <h4>Car Parking</h4>
+                                <h4>24 hour hot water service.</h4>
                                 <p>Hot water is provided 24*7 for every room.</p>
                             </div>
                             <div class="col-12 col-md-6 item">
@@ -184,14 +181,15 @@
                                 <p>A delightful and trendy banquet facility perfect for corporate meetings, business functions, weddings, birthdays, anniversaries, and other special events.</p>
                             </div>
                             <div class="col-12 col-md-6 item">
-                                <img src="assets/images/laundry.png" alt="">
-                                <h4>Laundry</h4>
-                                <p>At our hotel, we offer “Express Guest Laundry” service which enables us to serve our customers faster. We also have best in class room service.</p>
+                                <img src="assets/images/restaurant.png" alt="">
+                                <h4>Veg Restaurant</h4>
+                                <p>Experience the delight of tasting the native special dishes made by the Chef at our Veg Restaurant.
+                                </p>
                             </div>
                             <div class="col-12 col-md-6">
-                                <img src="assets/images/room-service.png" alt="">
-                                <h4>Friendly room service</h4>
-                                <p>At our hotel, we offer “Express Guest Laundry” service which enables us to serve our customers faster. We also have best in class room.</p>
+                                <img src="assets/images/laundry.png" alt="">
+                                <h4>Laundry & Friendly room service</h4>
+                                <p>We offer “Express Guest Laundry” service which enables us to serve our customers faster. We also have best in class room service.</p>
                             </div>
                             <div class="col-12 col-md-6">
                                 <img src="assets/images/wifi.png" alt="">
@@ -243,7 +241,7 @@
                                 <figure class="effect-text-in w-100">
                                     <img src="assets/images/monkeyfalls.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
-                                        <h4>MONKEY FALSS</h4>
+                                        <h4>Monkey Falls</h4>
                                         <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
                                         children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
                                         the hotel</p>
@@ -263,9 +261,9 @@
                             </div>
                             <div class="col-xl-6 col-md-6 col-12">
                                 <figure class="effect-text-in w-100 border-curved">
-                                    <img src="assets/images/valparai.jpg" class="img-fluid" alt="image" />
+                                    <img src="assets/images/parambikulam.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
-                                        <h4>ALIYAR DAM</h4>
+                                        <h4>Topslip & Parambikulam</h4>
                                         <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
                                         children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
                                         the hotel</p>
@@ -329,7 +327,7 @@
                             </div>
                             <div class="col-xl-6 col-md-6 col-12">
                                 <figure class="effect-text-in w-100">
-                                    <img src="assets/images/guruvayur.jpg" class="img-fluid" alt="image" />
+                                    <img src="assets/images/Munnar.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
                                         <h4>MUNNAR</h4>
                                         <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
@@ -434,9 +432,10 @@
             <div class="footer row">
                 <div class="d-flex justify-content-between align-items-center w-100">
                     <div>
-                        <p class="mb-0">500 terry francois street,</p>
-                        <p>Pollachi , Tamilnadu</p>
+                        <p class="mb-0">161/2, Kovai Road,</p>
+                        <p>Pollachi-2 , Tamilnadu</p>
                         <div class="d-flex">
+                            <span><img src="assets/images/trip adviser-01 (1).png width="100" height="100""/></span>
                             <span class="mdi mdi-facebook"></span>
                             <span class="mdi mdi-twitter ml-2"></span>
                             <span class="mdi mdi-instagram ml-2"></span>
