explore page images

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 <p>Hot water is provided 24*7 for every room.</p>
                             </div>
                             <div class="col-12 col-md-6 item">
-                                <img src="assets/images/restaurant.png" alt="">
+                                <img src="assets/images/banquet hall icon-01.png" alt="">
                                 <h4>Banquet Hall</h4>
                                 <p>A delightful and trendy banquet facility perfect for corporate meetings, business functions, weddings, birthdays, anniversaries, and other special events.</p>
                             </div>
