explore page content

--- a/index.html
+++ b/index.html
@@ -231,9 +231,7 @@
                                     <img src="assets/images/arivuthirukovil.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
                                         <h4>ARIVU THIRUKOVIL</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <p>Known as the temple of consciousness, Arivu Thirukovil is situated within 25 kms from the hotel. Founded by Vethathiri Maharishi, it is the best place to do yoga. Dyana Mandapam is open for meditation</p>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -242,9 +240,7 @@
                                     <img src="assets/images/monkeyfalls.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
                                         <h4>Monkey Falls</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <p>Monkey Falls is renowned for its natural waterfall, a spot for forest sightseeing and bathing facilities for tourists. Monkey Falls is situated 25 km away from the hotel.</p>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -253,9 +249,7 @@
                                     <img src="assets/images/valparai.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
                                         <h4>VALPARAI</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <p>This hill station is renowned for its tea estates and stunning landscapes. The famous temple of Lord Balaji is located 64 km away from the hotel.</p>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -264,9 +258,7 @@
                                     <img src="assets/images/parambikulam.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
                                         <h4>Topslip & Parambikulam</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <p>Topslip is a well-known wildlife sanctuary where you can spot Elephants, Deers, Bisons, Lions, and Tigers, 35 km from the hotel, while Parambikulam Dam is 58 km from the hotel with a stunning scenic view.</p>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -274,10 +266,8 @@
                                 <figure class="effect-text-in w-100">
                                     <img src="assets/images/masaniamman.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
-                                        <h4>ARIVU THIRUKOVIL</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <h4>Masaniamman Temple</h4>
+                                        <p>The Masaniamman Temple, temple of the strong goddess, is 15 km from the hotel. The Kundam Festival, held here every year, is a popular Tamilnadu State Festival.</p>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -285,10 +275,8 @@
                                 <figure class="effect-text-in w-100">
                                     <img src="assets/images/thirumoorthi.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
-                                        <h4>THIRUMOORTHI</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <h4>Thirumoorthi Dam</h4>
+                                        <p>35 km from the hotel, the dam is famous for its waterfall and temple. Another well-known dam, Amaravathi dam is also nearby.</p>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -296,10 +284,8 @@
                                 <figure class="effect-text-in w-100">
                                     <img src="assets/images/palani.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
-                                        <h4>PALANI</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <h4>Palani Temple</h4>
+                                        <p>The prominent and celebrated temple in Palani is situated 64 km from the hotel. The visitors can also opt either for a winch and rope car instead of taking the steps.</p>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -307,10 +293,8 @@
                                 <figure class="effect-text-in w-100">
                                     <img src="assets/images/kodaikanal.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
-                                        <h4>KODAIKANAL</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <h4>Kodaikanal</h4>
+                                        <p>A hill station at an altitude of 2133 mts, Kodaikanal is located 100 km away from the hotel. Pillar Rock, Lake, Solar Observatory and Silver Cascades are few of the beautiful places to visit. Natural fresh fruits are renowned for their taste here.</p>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -318,10 +302,8 @@
                                 <figure class="effect-text-in w-100">
                                     <img src="assets/images/ooty.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
-                                        <h4>OOTY</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <h4>Ooty</h4>
+                                        <p>Ooty is known as the Queen of hills and has an altitude of 2,637 metres. The highest mountain in Nilgiri is Doddabeta. An additional draw for visitors is a boat house at the Pykara reservoir. It is located 132 km north from the hotel.</p>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -330,9 +312,7 @@
                                     <img src="assets/images/Munnar.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
                                         <h4>MUNNAR</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <p>At the confluence of three mountain streams, Mudrapuzha, Nallathanni and Kundala, Munnar is located. With 1600m above sea level, the most sought destination in Munnar is the Eravikulam National Park, the first of its kind in Kerala. Munnar is situated 112 km from the hotel.</p>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -341,9 +321,7 @@
                                     <img src="assets/images/guruvayur.jpg" class="img-fluid" alt="image" />
                                     <figcaption>
                                         <h4>GURUVAYUR</h4>
-                                        <p>A beautiful dam with the finest garden for relaxing and enjoying your family time,
-                                        children’s play facilities, fish aquarium and boating. Aliyar dam is located 24 kms from
-                                        the hotel</p>
+                                        <p>Guruvayur temple is located in the town in kerala. There are five poojas and three sevilles daily in Guruvayoor temple. The temple opens at 3 o'clock in the morning after “palliunarthal” (ritual awakening of the lord). The temple is situated 115 km from the hotel. </p>
                                     </figcaption>
                                 </figure>
                             </div>
