--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 <div class="item"><img src="assets/images/carousel1.jpg" alt="GTA V"></div>
                 <div class="item"><img src="assets/images/carousel1.jpg" alt="Mirror Edge"></div>
             </div>
-            <!-- <div class="introduction">
+            <div class="introduction">
                 <h1 class="title text-italian text-center">Best Hotel In Pollachi</h1>
                 <h4 class="description text-center">Nestled in the heart of Pollachi, Madhava Inn offers spacious suites, plush furnishings and modern amenities, making it the perfect destination for business and leisure travellers.</h4>
-            </div> -->
+            </div>
         </div>
         <div id="rooms-section" class="cover-wrapper">
             <div class="cover-image">
