--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="./assets/vendors/owl.carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/vendors/owl.carousel/dist/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="./assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!-- End plugin css for this page -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -349,59 +350,111 @@
         </div>
         <!-- Modal for Contact - us Button -->
         <div class="modal booking-modal fade" id="bookingModal" tabindex="-1" role="dialog" aria-labelledby="bookingModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-md" role="document">
+            <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title" id="exampleModalLabel">Book a room</h4>
                 </div>
                 <div class="modal-body">
                     <p>If your dates are at all flexible, please let us know. We book up quickly, especially on summer weekends, but would love to find a way to host you.</p>
-                    <form>
-                        <div class="form-group">
-                            <label for="Name">Name</label>
-                            <input type="text" class="form-control" id="Name" placeholder="Name">
-                        </div>
-                        <div class="form-group">
-                            <label for="Email">Email</label>
-                            <input type="email" class="form-control" id="Email-1" placeholder="Email">
-                        </div>
-                        <div class="form-group">
-                            <label for="Email">Phone</label>
-                            <input type="email" class="form-control" id="phone" placeholder="Date of arrival">
-                        </div>
-                        <div class="form-group">
-                            <label for="Email">Date of Arrival</label>
-                            <input type="email" class="form-control" id="doa" placeholder="Date of departure">
-                        </div>
-                        <div class="form-group">
-                            <label for="Message">Date of Departure</label>
-                            <input type="email" class="form-control" id="dod" placeholder="Email">
-                        </div>
-                        <div class="dropdown mb-3">
-                            <label for="Message">Number of adults</label>
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">1</a>
-                            <a class="dropdown-item" href="#">2</a>
-                            <a class="dropdown-item" href="#">3</a>
+                    <form class="form-sample">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group row">
+                                <label class="col-sm-4 col-form-label">First Name</label>
+                                <div class="col-sm-8">
+                                    <input type="text" placeholder="First Name" class="form-control" />
+                                </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group row">
+                                <label class="col-sm-4 col-form-label">Last Name</label>
+                                <div class="col-sm-8">
+                                    <input type="text" placeholder="Last Name" class="form-control" />
+                                </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="dropdown">
-                            <label for="Message">Number of Kids</label>
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">1</a>
-                                <a class="dropdown-item" href="#">2</a>
-                                <a class="dropdown-item" href="#">3</a>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group row">
+                                <label class="col-sm-4 col-form-label">Email</label>
+                                <div class="col-sm-8">
+                                    <input type="text" placeholder="Email" class="form-control" />
+                                </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group row">
+                                <label class="col-sm-4 col-form-label">Phone</label>
+                                <div class="col-sm-8">
+                                    <input type="text" placeholder="Phone" class="form-control" />
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group row">
+                                <label class="col-sm-4 col-form-label">Date of arrival</label>
+                                <div class="col-sm-8">
+                                    <div id="datepicker-arrival" class="input-group date datepicker">
+                                        <input type="text" class="form-control">
+                                        <span class="input-group-addon input-group-append border-left">
+                                          <span class="mdi mdi-calendar input-group-text"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group row">
+                                <label class="col-sm-4 col-form-label">Date of departure</label>
+                                <div class="col-sm-8">
+                                    <div id="datepicker-departure" class="input-group date datepicker">
+                                        <input type="text" class="form-control">
+                                        <span class="input-group-addon input-group-append border-left">
+                                          <span class="mdi mdi-calendar input-group-text"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group row">
+                                <label class="col-sm-4 col-form-label">No of Adults</label>
+                                <div class="col-sm-8">
+                                    <select class="form-control">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    </select>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group row">
+                                <label class="col-sm-4 col-form-label">No of Kids</label>
+                                <div class="col-sm-8">
+                                    <select class="form-control">
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                    </select>
+                                </div>
+                                </div>
                             </div>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-success">Submit</button>
+                <button type="button" class="btn btn-success">Book</button>
                 </div>
             </div>
             </div>
@@ -426,7 +479,8 @@
         </footer>
     </div>
     <script src="assets/vendors/js/vendor.bundle.base.js"></script>
-    <script src="./assets/vendors/owl.carousel/dist/owl.carousel.min.js"></script>
+    <script src="assets/vendors/owl.carousel/dist/owl.carousel.min.js"></script>
+    <script src="assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <!-- Custom js for this page-->
     <script src="./assets/js/demo.js"></script>
     <!-- End custom js for this page-->
