--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                             <img src="assets/images/roomtype1.jpg" class="img-fluid">
                         </div>
                         <div class="col-12 col-md-6 room-description">
-                            <h5>A/C Suite</h5>
-                            <h6>Superior and spacious rooms with an additional guest lobby. We provide advanced amenities for an outstanding experience.</h6>
+                            <h4>A/C Suite</h4>
+                            <p>Superior and spacious rooms with an additional guest lobby. We provide advanced amenities for an outstanding experience.</p>
                             <ul class="mb-0">
-                                <li><h6>2 Guest</h6></li>
-                                <li><h6>1 Beds</h6></li>
+                                <li><p>2 Guest</p></li>
+                                <li><p>1 Beds</p></li>
                             </ul>
                             <div class="d-lg-flex justify-content-between align-items-center">
                                 <div class="d-flex">
@@ -107,11 +107,11 @@
                             <img src="assets/images/roomtype3.jpg" class="img-fluid">
                         </div>
                         <div class="col-12 col-md-6 room-description">
-                            <h5>A/C Executive</h5>
-                            <h6>Grand and modern rooms with the latest amenities, to offer you a feel at home experience.</h6>
+                            <h4>A/C Executive</h4>
+                            <p>Grand and modern rooms with the latest amenities, to offer you a feel at home experience.</p>
                             <ul class="mb-0">
-                                <li><h6>2 Guest</h6></li>
-                                <li><h6>1 Beds</h6></li>
+                                <li><p>2 Guest</p></li>
+                                <li><p>1 Beds</p></li>
                             </ul>
                             <div class="d-lg-flex justify-content-between align-items-center">
                                 <div class="d-flex">
@@ -132,11 +132,11 @@
                             <img src="assets/images/roomtype2.jpg" class="img-fluid">
                         </div>
                         <div class="col-12 col-md-6 room-description">
-                            <h5>A/C Deluxe</h5>
-                            <h6>Compact and spacious rooms, with a pleasing interior to lighten your mood and all modern comforts to ensure a comfortable atmosphere.</h6>
+                            <h4>A/C Deluxe</h4>
+                            <p>Compact and spacious rooms, with a pleasing interior to lighten your mood and all modern comforts to ensure a comfortable atmosphere.</p>
                             <ul class="mb-0">
-                                <li><h6>2 Guest</h6></li>
-                                <li><h6>2 Beds</h6></li>
+                                <li><p>2 Guest</p></li>
+                                <li><p>2 Beds</p></li>
                             </ul>
                             <div class="d-lg-flex justify-content-between align-items-center">
                                 <div class="d-flex">
