responsive navbar icon fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,47 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <header id="header-section">
+        <nav class="navbar navbar-expand-lg pl-3 pl-sm-0" id="navbar">
+            <div class="container">
+            <div class="navbar-brand-wrapper">
+                <img src="assets/images/logo.svg" alt="">
+                <span class="logo-title d-none d-lg-block font-weight-bold mb-0">MADHAVA INN</span>
+                <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="mdi mdi-menu navbar-toggler-icon"></span>
+                </button> 
+            </div>
+            <div class="collapse navbar-collapse navbar-menu-wrapper" id="navbarSupportedContent">
+                <ul class="navbar-nav align-items-lg-center align-items-start ml-auto">
+                <li class="d-flex align-items-center justify-content-between pl-4 pl-lg-0">
+                    <div class="navbar-collapse-logo">
+                        <img src="assets/images/logo.svg" alt="">
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#header-section">HOME <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#features-section">ROOM</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#digital-marketing-section">FACILITIES</a>  
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#feedback-section">EXPLORE</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#feedback-section">ABOUT US</a>
+                </li>
+                <li class="nav-item btn-contact-us ml-lg-4 my-3 my-lg-0">
+                    <button class="btn btn-book-now d-none d-md-block font-weight-medium" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
+                </li>
+                </ul>
+            </div>
+            </div> 
+        </nav>   
+    </header>
+    <!-- <nav class="navbar navbar-expand-lg navbar-light">
         <div class="d-flex flex-column">
             <a class="navbar-brand" href="#"><img src="assets/images/logo.svg" alt=""></a>
             <span class="logo-title font-weight-bold mb-0">MADHAVA INN</span>
@@ -55,7 +95,7 @@
             </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
     <div class="content-wrapper">
         <div id="home-section" class="hotel-carousel">
             <div id="owl-demo" class="owl-carousel owl-theme">
