--- a/index.html
+++ b/index.html
@@ -54,48 +54,6 @@
             </div> 
         </nav>   
     </header>
-    <!-- <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="d-flex flex-column">
-            <a class="navbar-brand" href="#"><img src="assets/images/logo.svg" alt=""></a>
-            <span class="logo-title font-weight-bold mb-0">MADHAVA INN</span>
-        </div>
-        <button class="navbar-toggler" type="button" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse justify-content-end collapse" id="navbarSupportedContent">
-            <div class="d-flex justify-content-between">
-            <img class="pl-3 d-block d-lg-none" src="./assets/images/logo.svg" alt="">
-            <button class="d-inline-block d-lg-none navbar-toggler border-0 pt-2" type="button"
-                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span>x</span>
-            </button>
-            </div>
-            <div class="d-lg-flex">
-                <ul class="navbar-nav navbar-nav-right align-items-center pt-3 pt-lg-0 mb-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#home-section">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#rooms-section">ROOM</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#facilities-section">FACILITIES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#explore-section">EXPLORE</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about-section">ABOUT US</a>
-                    </li>
-                    </ul>
-                <ul class="navbar-nav align-items-center pt-2 pt-lg-0">
-                <button class="btn btn-book-now font-weight-medium ml-5" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
-            </ul>
-            </div>
-        </div>
-    </nav> -->
     <div class="content-wrapper">
         <div id="home-section" class="hotel-carousel">
             <div id="owl-demo" class="owl-carousel owl-theme">
@@ -505,12 +463,11 @@
                     <div>
                         <p class="mb-0">161/2, Kovai Road,</p>
                         <p>Pollachi-2 , Tamilnadu</p>
-                        <div class="d-flex">
-                            <span><img src="assets/images/trip adviser-01 (1).png width="100" height="100""/></span>
-                            <span class="mdi mdi-facebook"></span>
-                            <span class="mdi mdi-twitter ml-2"></span>
-                            <span class="mdi mdi-instagram ml-2"></span>
-                            <span class="mdi mdi-linkedin ml-2"></span>
+                        <div class="d-flex social-media-cons">
+                            <span><img src="assets/images/twitter icon.png"></span>
+                            <span><img class="ml-2" src="assets/images/trip adviser icon.png"></span>
+                            <span><img class="ml-2" src="assets/images/Facebook icon.png"></span>
+                            <span><img class="ml-2" src="assets/images/instagram icon.png"></span>
                         </div>
                     </div>
                     <button class="btn btn-book-now d-none d-md-block font-weight-medium ml-5" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
