--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#header-section">HOME <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#home-section">HOME <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#features-section">ROOM</a>
+                    <a class="nav-link" href="#rooms-section">ROOM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#digital-marketing-section">FACILITIES</a>  
+                    <a class="nav-link" href="#facilities-section">FACILITIES</a>  
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#feedback-section">EXPLORE</a>
+                    <a class="nav-link" href="#explore-section">EXPLORE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#feedback-section">ABOUT US</a>
+                    <a class="nav-link" href="#about-section">ABOUT US</a>
                 </li>
                 <li class="nav-item btn-contact-us ml-lg-4 my-3 my-lg-0">
                     <button class="btn btn-book-now d-none d-md-block font-weight-medium" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
@@ -56,10 +56,10 @@
     </header>
     <div class="content-wrapper">
         <div id="home-section" class="hotel-carousel">
-            <div id="owl-demo" class="owl-carousel owl-theme">
-                <div class="item"><img src="assets/images/carousel1.jpg" alt="The Last of us"></div>
-                <div class="item"><img src="assets/images/carousel1.jpg" alt="GTA V"></div>
-                <div class="item"><img src="assets/images/carousel1.jpg" alt="Mirror Edge"></div>
+            <div id="owl-demo" class="owl-carousel owl-theme full-width">
+                <div class="item"><img src="assets/images/carousel1.jpg"></div>
+                <div class="item"><img src="assets/images/carousel1.jpg"></div>
+                <div class="item"><img src="assets/images/carousel1.jpg"></div>
             </div>
             <div class="introduction">
                 <h1 class="title text-italian text-center">Best Hotel In Pollachi</h1>
@@ -479,7 +479,7 @@
     <script src="assets/vendors/owl.carousel/dist/owl.carousel.min.js"></script>
     <script src="assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <!-- Custom js for this page-->
-    <script src="./assets/js/demo.js"></script>
+    <script src="./assets/js/script.js"></script>
     <!-- End custom js for this page-->
 </body>
 </html>
