--- a/index.html
+++ b/index.html
@@ -372,16 +372,14 @@
 
                         <h4 class="modal-title" id="exampleModalLabel">Book a room</h4>
                     </div>
-                    <form role="form" method="post" id="booknowform" name="contact-form" data-toggle="validator">
-                    <div class="modal-body">
-                        <p>If your dates are at all flexible, please let us know. We book up quickly, especially on summer weekends, but would love to find a way to host you.</p>
+                    <form>
+                        <div class="modal-body">
+                            <p>If your dates are at all flexible, please let us know. We book up quickly, especially on summer weekends, but would love to find a way to host you.</p>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">First Name</label>
-                                        <div class="col-sm-8">
-                                            <input type="text" placeholder="First Name" class="form-control" id="firstName" />
-                                        </div>
+                                        <label for="validationDefault01">First name</label>
+                                        <input type="text" class="form-control" id="validationDefault01" placeholder="First name" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -467,18 +465,17 @@
                                     </div>
                                 </div>
                             </div>
-                        
-                    </div>
-                    <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success book-a-room">Book</button>
-                    </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-success book-a-room">Book</button>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
         <footer>
-            <div class="footer row">
+            <div class="footer">
                 <div class="d-flex justify-content-between align-items-center w-100">
                     <div>
                         <p class="mb-0">161/2, Kovai Road,</p>
