--- a/index.html
+++ b/index.html
@@ -369,24 +369,28 @@
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-
                         <h4 class="modal-title" id="exampleModalLabel">Book a room</h4>
                     </div>
-                    <form>
+                    <form id="form">
                         <div class="modal-body">
                             <p>If your dates are at all flexible, please let us know. We book up quickly, especially on summer weekends, but would love to find a way to host you.</p>
                             <div class="row">
+                                <div class="col-12" id="errorElement"></div>
                                 <div class="col-md-6">
                                     <div class="form-group row">
-                                        <label for="validationDefault01">First name</label>
-                                        <input type="text" class="form-control" id="validationDefault01" placeholder="First name" required>
+                                        <label class="col-sm-4 col-form-label" for="firstName">First Name</label>
+                                        <div class="col-sm-8">
+                                            <input id="firstName" name="firstName" placeholder="First Name" class="form-control" />
+                                            <small>Error message</small>
+                                        </div> 
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">Last Name</label>
+                                        <label class="col-sm-4 col-form-label" for="lastName">Last Name</label>
                                         <div class="col-sm-8">
-                                            <input type="text" placeholder="Last Name" class="form-control" id="lastName" />
+                                            <input id="lastName" name="lastName" placeholder="Last Name" class="form-control" />
+                                            <small>Error message</small>
                                         </div>
                                     </div>
                                 </div>
@@ -394,17 +398,19 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">Email</label>
+                                        <label class="col-sm-4 col-form-label" for="email">Email</label>
                                         <div class="col-sm-8">
-                                            <input type="text" placeholder="Email" class="form-control" id="email"/>
+                                            <input id="email" name="email" placeholder="Email" class="form-control" />
+                                            <small>Error message</small>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">Phone</label>
+                                        <label class="col-sm-4 col-form-label" for="phone">phone</label>
                                         <div class="col-sm-8">
-                                            <input type="text" placeholder="Phone" class="form-control" id="phone"/>
+                                            <input id="phone" name="phone" placeholder="Phone number" class="form-control" />
+                                            <small>Error message</small>
                                         </div>
                                     </div>
                                 </div>
@@ -415,11 +421,12 @@
                                         <label class="col-sm-4 col-form-label">Date of arrival</label>
                                         <div class="col-sm-8">
                                             <div id="datepicker-arrival" class="input-group date datepicker">
-                                                <input type="text" class="form-control" id="DOA">
+                                                <input id="doa" name="doa" class="form-control">
                                                 <span class="input-group-addon input-group-append border-left">
-                                                <span class="mdi mdi-calendar input-group-text"></span>
+                                                    <span class="mdi mdi-calendar input-group-text"></span>
                                                 </span>
                                             </div>
+                                            <small>Error message</small>
                                         </div>
                                     </div>
                                 </div>
@@ -428,11 +435,12 @@
                                         <label class="col-sm-4 col-form-label">Date of departure</label>
                                         <div class="col-sm-8">
                                             <div id="datepicker-departure" class="input-group date datepicker">
-                                                <input type="text" class="form-control" id="DOD">
+                                                <input id="dod" name="dod" class="form-control">
                                                 <span class="input-group-addon input-group-append border-left">
-                                                <span class="mdi mdi-calendar input-group-text"></span>
+                                                    <span class="mdi mdi-calendar input-group-text"></span>
                                                 </span>
                                             </div>
+                                            <small>Error message</small>
                                         </div>
                                     </div>
                                 </div>
@@ -456,6 +464,7 @@
                                         <label class="col-sm-4 col-form-label">No of Kids</label>
                                         <div class="col-sm-8">
                                             <select class="form-control" id="noOfKids">
+                                                <option>0</option>
                                                 <option>1</option>
                                                 <option>2</option>
                                                 <option>3</option>
