--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                            <button id="closeModal" type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-success book-a-room">Book</button>
                         </div>
                     </form>
