--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
     <div class="content-wrapper">
         <div id="home-section" class="hotel-carousel">
             <div id="owl-demo" class="owl-carousel owl-theme full-width">
-                <div class="item"><img src="assets/images/carousel1.jpg"></div>
-                <div class="item"><img src="assets/images/carousel2.jpg"></div>
-                <div class="item"><img src="assets/images/carousel3.jpg"></div>
-                <div class="item"><img src="assets/images/carousel4.jpg"></div>
-                <div class="item"><img src="assets/images/carousel5.jpg"></div>
+                <div class="item"><img src="assets/images/carousel 1.jpg"></div>
+                <div class="item"><img src="assets/images/carousel 2.jpg"></div>
+                <div class="item"><img src="assets/images/carousel 3.jpg"></div>
+                <div class="item"><img src="assets/images/carousel 4.jpg"></div>
+                <div class="item"><img src="assets/images/carousel 5.jpg"></div>
+                <div class="item"><img src="assets/images/carousel 6.jpg"></div>
             </div>
             <div class="introduction">
                 <h1 class="title text-italian text-center">Best Hotel In Pollachi</h1>
@@ -81,10 +82,9 @@
                         <div class="col-12 col-md-6">
                             <div id="room-suite" class="owl-carousel owl-theme full-width">
                                 <img src="assets/images/roomtype1.jpg" class="img-fluid">
-                                <div class="item"><img src="assets/images/carousel2.jpg"></div>
-                                <div class="item"><img src="assets/images/carousel3.jpg"></div>
-                                <div class="item"><img src="assets/images/carousel4.jpg"></div>
-                                <div class="item"><img src="assets/images/carousel5.jpg"></div>
+                                <div class="item"><img src="assets/images/suite 1.jpg"></div>
+                                <div class="item"><img src="assets/images/suite 2.jpg"></div>
+
                             </div>
                         </div>
                         <div class="col-12 col-md-6 room-description">
@@ -112,10 +112,9 @@
                         <div class="col-12 col-md-6">
                             <div id="room-executive" class="owl-carousel owl-theme full-width">
                                 <img src="assets/images/roomtype3.jpg" class="img-fluid">
-                                <div class="item"><img src="assets/images/carousel2.jpg"></div>
-                                <div class="item"><img src="assets/images/carousel3.jpg"></div>
-                                <div class="item"><img src="assets/images/carousel4.jpg"></div>
-                                <div class="item"><img src="assets/images/carousel5.jpg"></div>
+                                <div class="item"><img src="assets/images/executive 1.jpg"></div>
+                                <div class="item"><img src="assets/images/executive 2.jpg"></div>
+
                             </div>
                         </div>
                         <div class="col-12 col-md-6 room-description">
@@ -143,10 +142,6 @@
                         <div class="col-12 col-md-6">
                             <div id="room-deluxe" class="owl-carousel owl-theme full-width">
                                 <img src="assets/images/roomtype2.jpg" class="img-fluid">
-                                <div class="item"><img src="assets/images/carousel2.jpg"></div>
-                                <div class="item"><img src="assets/images/carousel3.jpg"></div>
-                                <div class="item"><img src="assets/images/carousel4.jpg"></div>
-                                <div class="item"><img src="assets/images/carousel5.jpg"></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 room-description">
