--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label" for="phone">phone</label>
+                                        <label class="col-sm-4 col-form-label" for="phone">Phone</label>
                                         <div class="col-sm-8">
                                             <input id="phone" name="phone" placeholder="Phone number" class="form-control" />
                                             <small>Error message</small>
