mobile view book now

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="#about-section">ABOUT US</a>
                 </li>
                 <li class="nav-item btn-contact-us ml-lg-4 my-3 my-lg-0">
-                    <button class="btn btn-book-now d-none d-md-block font-weight-medium" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
+                    <button class="btn btn-book-now font-weight-medium" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
                 </li>
                 </ul>
             </div>
@@ -485,7 +485,7 @@
         </div>
         <footer>
             <div class="footer">
-                <div class="d-flex justify-content-between align-items-center w-100">
+                <div class="d-md-flex justify-content-between align-items-center w-100">
                     <div>
                         <p class="mb-0">161/2, Kovai Road,</p>
                         <p>Pollachi-2 , Tamilnadu</p>
@@ -496,7 +496,7 @@
                             <span><img class="ml-2" src="assets/images/instagram icon.png"></span>
                         </div>
                     </div>
-                    <button class="btn btn-book-now d-none d-md-block font-weight-medium ml-5" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
+                    <button class="btn btn-book-now font-weight-medium ml-md-5 mt-3 mt-md-0" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
                 </div>
             </div>
         </footer>
