--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
                         <div class="col-12 col-md-6">
                             <div id="room-deluxe" class="owl-carousel owl-theme full-width">
                                 <img src="assets/images/roomtype2.jpg" class="img-fluid">
+                                <div class="item"><img src="assets/images/delux 1.jpg"></div>
+                                <div class="item"><img src="assets/images/delux 2.webp"></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 room-description">
