--- a/index.html
+++ b/index.html
@@ -482,10 +482,11 @@
         </div>
         <footer>
             <div class="footer">
-                <div class="d-md-flex justify-content-between align-items-center w-100">
-                    <div>
+                <div class="row">
+                    <div class="col-12 col-md-3">
                         <p class="mb-0">161/2, Kovai Road,</p>
-                        <p>Pollachi-2 , Tamilnadu</p>
+                        <p class="mb-0">Pollachi-2 , Tamilnadu</p>
+                        <p>Created By <a href="asthraxmedia.com">Asthraxmedia</a></p>
                         <div class="d-flex social-media-cons">
                             <span><img src="assets/images/twitter icon.png"></span>
                             <span><img class="ml-2" src="assets/images/trip adviser icon.png"></span>
@@ -493,7 +494,12 @@
                             <span><img class="ml-2" src="assets/images/instagram icon.png"></span>
                         </div>
                     </div>
-                    <button class="btn btn-book-now font-weight-medium ml-md-5 mt-3 mt-md-0" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
+                    <div class="col-12 col-md-9 col-lg-6 mt-4 mt-lg-0 mapouter"><div class="gmap_canvas"><iframe width="100%" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=madhava%20inn&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies2.org">fmovies</a></div><style>.mapouter{position:relative;text-align:right;height:200px;width:100%px;}.gmap_canvas {overflow:hidden;background:none!important;height:200px;width:100%px;}</style></div>
+                    <div class="col-12 col-md-3 mt-4 mt-lg-0">
+                        <div class="d-flex justify-content-lg-end align-items-center h-100">
+                            <button class="btn btn-book-now font-weight-medium" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </footer>
